# mcp-atlassian

./: .env.example  .gitignore  .tool-versions  CLAUDE.md  Cargo.toml  README.en.md  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/mcp/: handlers.rs  mod.rs  server.rs  types.rs
src/tools/: handler.rs  mod.rs  response_optimizer.rs
src/tools/confluence/: field_filtering.rs  mod.rs
src/tools/jira/: adf_utils.rs  field_filtering.rs  mod.rs
src/utils/: http_utils.rs  logging.rs  mod.rs
tests/: lib.rs
tests/common/: fixtures.rs  mocks.rs  mod.rs
tests/fixtures/confluence/: page_response.json  search_response.json
tests/fixtures/jira/: issue_response.json  search_response.json
tests/fixtures/jira/error_responses/: auth_401.json  rate_limit_429.json
tests/integration/: mod.rs  test_confluence_integration.rs  test_jira_integration.rs  test_stateful.rs
tests/protocol/: mod.rs  test_initialize.rs  test_tools_call.rs  test_tools_list.rs
