[package]
name = "mcp-atlassian"
version = "0.1.0"
edition = "2024"
authors = ["MCP Atlassian Team"]
description = "High-performance Rust implementation of MCP Atlassian server"
license = "MIT"

[lib]
name = "mcp_atlassian"
path = "src/lib.rs"

[[bin]]
name = "mcp-atlassian"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"

# Environment variables
dotenv = "0.15"

# Encoding
base64 = "0.22"
async-trait = "0.1"

[dev-dependencies]
# Async testing
tokio-test = "0.4"

# HTTP mocking
wiremock = "0.6"

# Performance benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# Benchmarks will be added later
# [[bench]]
# name = "performance"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true